--- a/code/chap21.ipynb
+++ b/code/chap21.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +196,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the same event function as last time."
+    "We can use the same event function as in the previous chapter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,13 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, events=event_func)\n",
+    "results, details = run_ode_solver(system, slope_func, events=event_func, max_step=0.5*s)\n",
     "details.message"
    ]
   },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,19 +452,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution goes here"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -504,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -518,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -563,7 +556,7 @@
     "    \n",
     "    C_d = 2 * mass * g / (rho * area * v_term**2)\n",
     "    init = State(y=y_attach, v=v_init)\n",
-    "    t_end = 30 * s\n",
+    "    t_end = 20 * s\n",
     "\n",
     "    return System(params, C_d=C_d, \n",
     "                  init=init, t_end=t_end)"
@@ -578,12 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = make_system(params)\n",
-    "system"
+    "system = make_system(params)"
    ]
   },
   {
@@ -595,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -632,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +666,8 @@
     "    \"\"\"Computes drag force in the opposite direction of `v`.\n",
     "    \n",
     "    v: velocity\n",
-    "    \n",
+    "    system: System object\n",
+    "\n",
     "    returns: drag force\n",
     "    \"\"\"\n",
     "    unpack(system)\n",
@@ -686,12 +679,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here's the drag force at 60 meters per second."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = -60 * m/s\n",
+    "f_drag = drag_force(v, system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Acceleration due to drag at 60 m/s is approximately g, which confirms that 60 m/s is terminal velocity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_drag = f_drag / system.mass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now here's the slope function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -726,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,14 +768,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ts = linspace(0, system.t_end, 301)\n",
-    "results, details = run_ode_solver(system, slope_func, t_eval=ts)\n",
+    "results, details = run_ode_solver(system, slope_func, max_step=0.3*s)\n",
     "details"
    ]
   },
@@ -762,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
@@ -816,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,101 +900,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "max_acceleration / g"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solving for length\n",
-    "\n",
-    "Assuming that `k` is fixed, let's find the length `L` that makes the minimum altitude of the jumper exactly 0.\n",
-    "\n",
-    "Here's the error function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def error_func(L, params):\n",
-    "    \"\"\"Minimum height as a function of length.\n",
-    "    \n",
-    "    length: length in m\n",
-    "    params: Params object\n",
-    "    \n",
-    "    returns: height in m\n",
-    "    \"\"\"\n",
-    "    params = Params(params, L=L)\n",
-    "    system = make_system(params)\n",
-    "\n",
-    "    ts = linspace(0, system.t_end, 201)\n",
-    "    results, details = run_ode_solver(system, slope_func, t_eval=ts)\n",
-    "    min_height = min(results.y)\n",
-    "    return min_height"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's test it with the same initial guess, `L = 100 m`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "guess = 150 * m\n",
-    "error_func(guess, params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And find the value of `L` we need for the world record jump:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solution = fsolve(error_func, guess, params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Optional:** Search for the combination of length and spring constant that yields minimum height 0 while minimizing peak acceleration."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Optional exercise:** This model neglects the weight of the bungee cord, which might be non-negligible.  Implement the [model described here](http://iopscience.iop.org/article/10.1088/0031-9120/45/1/007) and see how different it is from our simplified model. "
    ]
   },
   {
@@ -983,12 +918,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "%psource gradient"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solving for length\n",
+    "\n",
+    "Assuming that `k` is fixed, let's find the length `L` that makes the minimum altitude of the jumper exactly 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The metric we are interested in is the lowest point of the first oscillation.  For both efficiency and accuracy, it is better to stop the simulation when we reach this point, rather than run past it and the compute the minimum.\n",
+    "\n",
+    "Here's an event function that stops the simulation when velocity is 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def event_func(state, t, system):\n",
+    "    \"\"\"Return velocity.\n",
+    "    \"\"\"\n",
+    "    y, v = state\n",
+    "    return v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As usual, we should test it with the initial conditions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_func(system.init, 0, system)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we see that we have a problem.  Since the event function returns 0 under the initial conditions, the simulation would stop immediately.  We can solve that problem by specifying the direction of the event function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_func.direction = +1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When direction is positive, it only stops the simulation if the velocity is 0 and increasing, which is what we want."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can test it an confirm that it stops at the bottom of the jump."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results, details = run_ode_solver(system, slope_func, events=event_func, max_step=0.3*s)\n",
+    "plot_position(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min(results.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Write an error function that takes `L` and `params` as arguments, simulates a bungee jump, and returns the lowest point.\n",
+    "\n",
+    "Test the error function with a guess of 25 m and confirm that the return value is about 5 meters.\n",
+    "\n",
+    "Use `fsolve` with your error function to find the value of `L` that yields a perfect bungee dunk.\n",
+    "\n",
+    "Run a simulation with the result from `fsolve` and confirm that it works.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Optional exercise:** Search for the combination of length and spring constant that yields minimum height 0 while minimizing peak acceleration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1007,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
