--- a/code/salmon.ipynb
+++ b/code/salmon.ipynb
@@ -306,7 +306,7 @@
     "    results = TimeSeries()\n",
     "    results[t_0] = system.p_0\n",
     "    \n",
-    "    for t in linrange(t_0, t_end-1):\n",
+    "    for t in linrange(t_0, t_end):\n",
     "        results[t+1] = update_func(results[t], t, system)\n",
     "\n",
     "    return results"
