--- a/code/trees.ipynb
+++ b/code/trees.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,14 +450,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Searching for the parameters that best fit the data would be difficult, so I'll use `fit_leastsq`.\n",
+    "With different values for the parameters, we get curves with different behavior.  Here are a few that I chose by hand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_and_plot(alpha, dim, data):\n",
+    "    params = alpha, dim\n",
+    "    system = make_system(params, data)\n",
+    "    results = run_simulation(system, update)\n",
+    "    plot(results, ':', color='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_and_plot(0.145, 2, data)\n",
+    "run_and_plot(0.58, 2.4, data)\n",
+    "run_and_plot(2.8, 2.8, data)\n",
+    "run_and_plot(6.6, 3, data)\n",
+    "run_and_plot(15.5, 3.2, data)\n",
+    "run_and_plot(38, 3.4, data)\n",
+    "\n",
+    "plot(data, label='data')\n",
+    "decorate(xlabel='Time (years)',\n",
+    "             ylabel='Height (feet)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To find the parameters that best fit the data, I'll use `fit_leastsq`.\n",
     "\n",
     "We need an error function that takes parameters and returns errors:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,6 +819,125 @@
     "2) It provides a way to estimate the fractal dimension of a tree based on a growth curve (probably with different values for different species).\n",
     "\n",
     "3) It might provide a way to predict future growth of a tree, based on measurements of past growth.  As with the logistic population model, this would probably only work if we have observed the part of the curve where the growth rate starts to decline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "\n",
+    "With some help from my colleague, John Geddes, we can do some analysis.\n",
+    "\n",
+    "Starting with the difference equation in terms of mass:\n",
+    " \n",
+    "$m_{n+1} = m_n + \\alpha A (1 - h / K) $\n",
+    "\n",
+    "We can write the corresponding differential equation:\n",
+    "\n",
+    "(1) $ \\frac{dm}{dt} = \\alpha A (1 - h / K) $\n",
+    "\n",
+    "With\n",
+    "\n",
+    "(2) $A = h^2$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "(3) $m = h^D$\n",
+    "\n",
+    "Taking the derivative of the last equation yields\n",
+    "\n",
+    "(4) $\\frac{dm}{dt} = D h^{D-1} \\frac{dh}{dt}$\n",
+    "\n",
+    "Combining (1), (2), and (4), we can write a differential equation for $h$:\n",
+    "\n",
+    "(5) $\\frac{dh}{dt} = \\frac{\\alpha}{D} h^{3-D} (1 - h/K)$\n",
+    "\n",
+    "Now let's consider two cases:\n",
+    "\n",
+    "* With infinite $K$, the factor $(1 - h/K)$ approaches 1, so we have Model 2.\n",
+    "* With finite $K$, we have Model 3.\n",
+    "\n",
+    "#### Model 2\n",
+    "\n",
+    "Within Model 2, we'll consider two special cases, with $D=2$ and $D=3$.\n",
+    "\n",
+    "With $D=2$, we have\n",
+    "\n",
+    "$\\frac{dh}{dt} = \\frac{\\alpha}{2} h$\n",
+    "\n",
+    "which yields exponential growth with parameter $\\alpha/2$.\n",
+    "\n",
+    "With $D=3$, we have Model 1, with this equation:\n",
+    "\n",
+    "$\\frac{dh}{dt} = \\frac{\\alpha}{3}$\n",
+    "\n",
+    "which yields linear growth with parameter $\\alpha/3$.\n",
+    "\n",
+    "This result explains why Model 1 is linear.\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Model 3\n",
+    "\n",
+    "Within Model 3, we'll consider two special cases, with $D=2$ and $D=3$.\n",
+    "\n",
+    "With $D=2$, we have\n",
+    "\n",
+    "$\\frac{dh}{dt} = \\frac{\\alpha}{2} h (1 - h/K)$\n",
+    "\n",
+    "which yields logisitic growth with parameters $r = \\alpha/2$ and $K$.\n",
+    "\n",
+    "With $D=3$, we have\n",
+    "\n",
+    "$\\frac{dh}{dt} = \\frac{\\alpha}{3} (1 - h/K)$\n",
+    "\n",
+    "which yields a first order step response; that is, it converges to $K$ like a negative exponential:\n",
+    "\n",
+    "$ h(t) = c \\exp(-\\frac{\\alpha}{3K} t) + K $\n",
+    "\n",
+    "where $c$ is a constant that depends on the initial conditions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 10\n",
+    "D = 3\n",
+    "K = 200\n",
+    "params = alpha, D, K\n",
+    "system = make_system(params, data)\n",
+    "results = run_simulation(system, update3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = results.index\n",
+    "a = alpha/3\n",
+    "h = (-220) * exp(-a * t / K) + K\n",
+    "plot(t, h)\n",
+    "plot(results)\n",
+    "decorate(xlabel='Time (years)',\n",
+    "         ylabel='Height (feet)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additional resources:\n",
+    "\n",
+    "Garcia, [A stochastic differential equation model for the\n",
+    "height growth of forest stands](http://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=664FED1E46ABCBF6E16741C294B79976?doi=10.1.1.608.81&rep=rep1&type=pdf)\n",
+    "\n",
+    "[EasySDE software and data](http://forestgrowth.unbc.ca/)"
    ]
   },
   {
