--- a/code/wall.ipynb
+++ b/code/wall.ipynb
@@ -333,26 +333,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def require_units(x, units):\n",
-    "    \"\"\"Apply units to `x`, if necessary.\n",
-    "    \n",
-    "    x: Quantity or number\n",
-    "    units: Pint Units object\n",
-    "    \n",
-    "    returns: Quantity\n",
-    "    \"\"\"\n",
-    "    if isinstance(x, Quantity):\n",
-    "        return x.to(units)\n",
-    "    else:\n",
-    "        return Quantity(x, units)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -645,6 +625,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = Params(\n",
+    "    R1 = 0.076 * m**2 * K / W,\n",
+    "    R2 = 0.272 * m**2 * K / W,\n",
+    "    R3 = 0.078 * m**2 * K / W,\n",
+    "    C1 = 212900 * J / m**2 / K,\n",
+    "    C2 = 113100 * J / m**2 / K)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -653,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,12 +660,11 @@
     "    returns: array of float\n",
     "    \"\"\"\n",
     "    print(params)\n",
-    "    R1, R2, R3, C1, C2 = params\n",
     "    system = make_system(params, data)\n",
     "    results, details = run_ode_solver(system, slope_func, t_eval=system.ts)\n",
     "    Q_frame = recompute_fluxes(results, system)\n",
     "    errors = compute_error(Q_frame, data)\n",
-    "    print(np.sqrt(np.mean(errors**2)))\n",
+    "    print('RMSE', np.sqrt(np.mean(errors**2)))\n",
     "    return errors"
    ]
   },
@@ -684,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,15 +717,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "details.mesg"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best params are only slightly different from the starting place, which suggests the starting place is at least locally optimal. "
+    "The best params are only slightly different from the starting place. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,11 +781,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_Q_out(Q_frame, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Try starting the model with a different set of parameters and see if it moves toward the parameters in the paper.\n",
+    "\n",
+    "I found that no matter where I start, `fit_leastsq` doesn't move far, which suggests that it is not able to optimize the parameters effectively."
    ]
   },
   {
@@ -799,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
